--- a/graphql-base/package.json
+++ b/graphql-base/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.2"
+    "graphql-tools": "^3.0.2",
+    "node-fetch": "^2.1.2"
   }
 }
