--- a/graphql-base/package.json
+++ b/graphql-base/package.json
@@ -15,6 +15,11 @@
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.2",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "zipkin": "^0.14.1",
+    "zipkin-context-cls": "^0.13.0",
+    "zipkin-instrumentation-express": "^0.14.1",
+    "zipkin-instrumentation-fetch": "^0.14.1",
+    "zipkin-transport-http": "^0.14.1"
   }
 }
