--- a/graphql-base/package.json
+++ b/graphql-base/package.json
@@ -16,10 +16,12 @@
     "graphql-tag": "^2.9.2",
     "graphql-tools": "^3.0.2",
     "node-fetch": "^2.1.2",
+    "opentracing": "^0.14.3",
     "zipkin": "^0.14.1",
     "zipkin-context-cls": "^0.13.0",
     "zipkin-instrumentation-express": "^0.14.1",
     "zipkin-instrumentation-fetch": "^0.14.1",
+    "zipkin-javascript-opentracing": "^2.0.0",
     "zipkin-transport-http": "^0.14.1"
   }
 }
