--- a/graphql-base/package.json
+++ b/graphql-base/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^2.0.0-beta.7",
+    "apollo-opentracing": "0.1.0",
+    "apollo-server-express": "2.0.0-beta.7",
     "body-parser": "^1.18.3",
+    "core-js": "^2.5.7",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
