rename deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ matrix:
   include:
     - script:
       - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-      - ./deploy.sh
+      - ./deploy-docker.sh
